[project]
name = "ar-detection"
version = "0.1.0"
description = ""
authors = [
    {name = "Danessely",email = "hdystasyfibkv@gmail.com"}
]
readme = "README.md"
requires-python = "3.11.9"
dependencies = [
    "scipy (>=1.15.2,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "xarray[io] (>=2025.3.1,<2026.0.0)",
    "cartopy (>=0.24.1,<0.25.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "ultralytics (>=8.3.136,<9.0.0)"
]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
